objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__UsageQuantity__c</fullName>
        <description>Usage Quantity</description>
        <label>Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitCost__c</fullName>
        <description>Usage Cost</description>
        <label>Usage Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitPrice__c</fullName>
        <description>Usage Price</description>
        <label>Usage Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Time when this line item was last validated</description>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>